dataset1235/2025-2/1153765216/users/896391410/executions/2814675586_208040576.log
== SUBMISSION (2025-08-26 19:32:35)
-- CODE: 
preco = float(input())
preco_final = preco - 15%100
print(preco_final)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
1185.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
85.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
0.0
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
-5.0
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
185.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
5.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:34:17)
-- CODE: 
preco = float(input())
preco_final = preco - 15%100
print(preco_final)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
1185.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
85.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
0.0
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
-5.0
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
185.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
5.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 19:21:13)
-- CODE: 
preco = float(input())
preco_final = preco - (15%100)
print(preco_final)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
1185.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
85.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
0.0
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
-5.0
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
185.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 19:21:18)
-- CODE: 
preco = float(input())
preco_final = preco - (15%100)
print(preco_final)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
1185.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
85.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
0.0
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
-5.0
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
185.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:20:18)
-- CODE: 
preco = float(input())
preco_final = preco - 15/100
print(preco_final)
-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
1199.85
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
99.85
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
14.85
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
9.85
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
199.85
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
19.85
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:08:02)
-- CODE: 
preco = float(input())
preco_final = preco - 15/100
print(preco_final)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
1199.85
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
99.85
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
14.85
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
9.85
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
199.85
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
19.85
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:36:19)
-- CODE: 
preco = float(input())
preco_final = preco - (15%100)
print(preco_final)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
1185.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
85.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
0.0
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
-5.0
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
185.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
5.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:06:28)
-- CODE: 
preco = float(input())
preco_final = preco - 15/100
print(preco_final)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
1199.85
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
99.85
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
14.85
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
9.85
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
199.85
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
19.85
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:04:24)
-- CODE: 
preco = float(input())
preco_final = (15/100) - preco
print(preco_final)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
-1199.85
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
-99.85
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
-14.85
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
-9.85
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
-199.85
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
-19.85
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:32:25)
-- CODE: 
preco = float(input())
preco_final = preco - 15%
print(preco_final)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
-- ERROR:
File "XXXX", line 2
    preco_final = preco - 15%
                             ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
-- ERROR:
File "XXXX", line 2
    preco_final = preco - 15%
                             ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
-- ERROR:
File "XXXX", line 2
    preco_final = preco - 15%
                             ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
-- ERROR:
File "XXXX", line 2
    preco_final = preco - 15%
                             ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
-- ERROR:
File "XXXX", line 2
    preco_final = preco - 15%
                             ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
-- ERROR:
File "XXXX", line 2
    preco_final = preco - 15%
                             ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:03:55)
-- CODE: 
preco = float(input())
preco_final = 15/100 - preco
print(preco_final)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
-1199.85
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
-99.85
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
-14.85
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
-9.85
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
-199.85
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
-19.85
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:21:48)
-- CODE: 
preco = float(input())
preco_final = preco - 15%100
print(preco_final)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
1185.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
85.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
0.0
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
-5.0
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
185.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
5.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:47:02)
-- CODE: 
preco = float(input())
preco_final = preco - 20%100
print(preco_final)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
1180.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
80.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
-5.0
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
-10.0
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
180.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:03:14)
-- CODE: 
preco = float(input())
preco_final = 15/100 * preco
print(preco_final)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
180.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
15.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
2.25
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
1.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
30.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
3.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:21:12)
-- CODE: 
preco = float(input())
preco_final = preco - (15%100)
print(preco_final)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
1185.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
85.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
0.0
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
-5.0
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
185.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
5.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:20:54)
-- CODE: 
preco = float(input())
preco_final = preco - 15%100
print(preco_final)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
1185.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
85.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
0.0
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
-5.0
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
185.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
5.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:20:47)
-- CODE: 
preco = float(input())
preco_final = preco - 15%100
print(preco_final)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
1185.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
85.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
0.0
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
-5.0
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
185.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
5.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:06:18)
-- CODE: 
preco = float(input())
preco_final = preco - (15/100)
print(preco_final)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
1199.85
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
99.85
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
14.85
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
9.85
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
199.85
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
19.85
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:07:03)
-- CODE: 
preco = float(input())
preco_final = (preco) - 15/100
print(preco_final)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
1199.85
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
99.85
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
14.85
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
9.85
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
199.85
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
19.85
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:04:25)
-- CODE: 
preco = float(input())
preco_final = (15/100) - preco
print(preco_final)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
-1199.85
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
-99.85
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
-14.85
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
-9.85
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
-199.85
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
-19.85
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:21:11)
-- CODE: 
preco = float(input())
preco_final = preco - (15%100)
print(preco_final)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
1185.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
85.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
0.0
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
-5.0
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
185.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
5.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
